cabal-version: 2.4
name:          turtle
version:       0.0.0.0
author:        Peter Jones
maintainer:    pjones@devalot.com

common options
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:
    -Wall -Wno-name-shadowing -Werror=incomplete-record-updates
    -Werror=incomplete-uni-patterns -Werror=missing-home-modules
    -Widentities -Wmissing-export-lists -Wredundant-constraints

common dependencies
  build-depends:
    , base        >=4.14 && <5
    , megaparsec  ^>=9.0
    , relude      ^>=1.0

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude)

executable turtle
  import:  options, dependencies
  main-is: turtle.hs
